--- a/main.css
+++ b/main.css
@@ -1,22 +1,80 @@
-body {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.message {
+    display: block;
+    margin: 10px auto;
+    box-shadow: 0 0 0 1px #e0b4b4 inset, 0 0 0 0 transparent;
+    background-color: #fff6f6;
+    color: #9f3a38;
+    padding: 1em 1.5em;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 800px;
 }
 
-.colorBtn {
-    padding: 0.50rem 0.30rem;
-    border: 3px solid #999999;
-    color: #fefefe;
-    background: rgba(0, 0, 0, 0.6);
-    font-size: 1.2rem;
-    text-transform: capitalize;
-    cursor: pointer;
-    outline: none;
-    border-radius: 20px;
+.message span {
+    font-weight: bold;
 }
 
-.colorBtn:hover {
-    background: rgba(0, 0, 0);
+.phone {
+    position: absolute;
+    width: 36px;
+    height: 60px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    border-radius: 5px;
+    background: #333;
+    transform: rotate(20deg);
+}
+
+.phone:before {
+    position: absolute;
+    content: "";
+    width: 30px;
+    height: 40px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background: #fff;
+}
+
+.rotate {
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    border-radius: 50%;
+    border: 3px solid #aaa;
+    border-bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    transform: rotate(20deg);
+    z-index: -2;
+    box-sizing: border-box;
+}
+
+.rotate:before,
+.rotate:after {
+    position: absolute;
+    content: "";
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    bottom: -5px;
+}
+
+.rotate:before {
+    border-left: 10px solid #aaa;
+    left: 15px;
+    transform: rotate(10deg);
+}
+
+.rotate:after {
+    border-right: 10px solid #aaa;
+    right: 15px;
+    transform: rotate(-10deg);
 }
